--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -85,10 +85,13 @@
       \newsym[Steifigkeitsmatrix]{K}{K}
       \newsym[Federkraft]{FL}{\overrightarrow{F_L}}
       \newsym[Trägheitskraft]{FT}{\overrightarrow{F_T}}
-      \newsym[Verschiebung des k-ten Massepunktes aus der Ruhelage]{xk}{x_k}
+      \newsym[Auslenkung des k-ten Massepunktes aus der Ruhelage]{xk}{x_k}
       \newsym[Eigenkreisfrequenz]{w}{\omega}
+      \newsym[vorgegebenes Intervall]{wAwB}{[\omega_a,\omega_b]}
+      \newsym[Eigenwert des Matrix-Pencils, definiert durch $\lambda:=\omega^2$]{lam}{\lambda}
+      \newsym[Intervall, definiert durch $\lbrack\lambda_a,\lambda_b\rbrack := \lbrack\omega_a,\omega_b\rbrack$]{lamAlamB}{[\lambda_a,\lambda_b]}
 \closesymdef
-
+% , soll zum Schluss frei von Eigenkreisfrequenzen sein
 
 \begin{document}
 \selectlanguage{german}
@@ -734,19 +737,19 @@ Tag der Einreichung: \datum
             Man will diese Gleichung für $v\ne 0$ lösen, da man sonst eine triviale Lösung erhält, in der keine Masse schwingt.
 
             Um die Theorie aus Kapitel \ref{sec: EW Problem_Futamura} anzuwenden, so definiere
-            $$\lambda_i := \w_i, i=1,\dots,n$$
+            $$\lambda_i := \w_i^2,\quad i=1,\dots,n$$
 
             Es folgt das allgemeine Eigenwertproblem
             \begin{equation}
                   \label{eqn: allg EW Problem mit lam}
-                  (K-\lambda\,M)\,v = 0
+                  (\K-\lambda\,\M)\,v = 0
             \end{equation}
 
             Man beachte, dass diese Gleichung genau die Form aus (\ref{eqn: allg EW Problem}) besitzt.
-            Man kann für die vorgestellten Probleme folgern, dass für $N$ aus Kapitel \ref{sec: Futamura} gilt:
+            Man kann für die vorgestellten Probleme folgern, dass für $N$ aus Kapitel \ref{sec: Futamura}
             $$N=\{1,\dots,n\}$$
 
-            Da die Massenmatrizen aus (\ref{def: M1}) und (\ref{def: M2}) hier Diagonalmatrizen mit positiven Einträgen auf der Diagonalen sind. Somit sind auch alle Eigenwerte positiv.
+            gilt, da die Massenmatrizen aus (\ref{def: M1}) und (\ref{def: M2}) hier Diagonalmatrizen mit positiven Einträgen auf der Diagonalen sind. Somit sind auch alle Eigenwerte positiv.
 
             Für reguläre Massenmatrizen gelte nach \cite[S. 376]{matrixGolub} für (\ref{eqn: allg EW Problem mit lam}):
             $$(K-\lambda\,M)\,v = 0 \Leftrightarrow (M\inv K-\lambda\In)\,v=0$$
@@ -775,29 +778,19 @@ Tag der Einreichung: \datum
       \section{Vorüberlegungen}
             Die in diesem Abschnitt erwähnten Schritte stammen aus \cite[S. 2-4]{hauptteilTkachuk}.
 
-            Betrachte das Problem
-            $$(K-\w^2 M)x = 0$$
-            Falls man das Problem eigenständig betrachtet, so sucht man eine Familie $(\w_j)_j$, die diese Gleichung für ein $x_j \ne 0$ löst.
-
-            Um auf die Form eines Matrix-Pencils und somit auf die normale Form eines allgemeinen Eigenwertproblems zu gelangen, definiere
-            $$\lambda_j := \w_j^2$$
-% zitat      
-            Für das Lösen dieser Gleichung sucht man nun nicht mehr eine Familie $(\w_j)_j$, sondern genau die Eigenwerte des Matrix-Pencils, $\lambda(K,M)$.
-            Man beachte aber, dass sich durch die Substitution auch die gegebenen Grenzen verändert haben:
-            man will nun, dass keine Eigenwerte des Matrix-Pencils $(\AlamB)$ in dem Intervall $[\lambda_a, \lambda_b]:=[\w_a^2,\w^2_b]$ liegen.
-
-            Eine normale Massematrix, d.h. eine Diagonalmatrix mit ausschließlich positiven Einträgen, ist offenbar regulär.
-% ???? warum hier so random
+            Betrachte Gleichung (\ref{eqn: allg EW Problem mit lam}), durch die Definition $\lam = \w^2$ verändert sich auch das Intervall, welches man betrachtet:
+            $$\lamAlamB:=\wAwB$$
+% \w_a und \w_b nicht erklärt
             Definiere nun die Funktion $h$ wie folgt:
             $$h(\lambda):=\1_{[\lambda_a,\lambda_b]}(\lambda)$$
 
             Da man nur daran interessiert ist, ob ein Eigenwert in dem Intervall liegt oder nicht, definiere
 
-            $$\mu := \sum_{j=1}^{n} h(\lambda_j)$$
+            $$\mu := \sum_{j\in N} h(\lambda_j)$$
 
-            Obwohl diese Funktion die Anzahl der Eigenwerte korrekt beschreibt, so gibt es einige Schwachstellen, sollte man diese Funktion minimieren wollen:
-% wie kann eine Funktion korrekt sein?
-            Die Funktion ist nicht stetig differenzierbar und eine Treppenfunktion, damit sind alle Ableitungen gleich 0, also unbrauchbar für Minimierungsalogrithmen, die mit der Ableitung arbeiten.
+            Nach Kapitel \ref{sec: Formel EW} gilt aber $N=\{1,\dots,N\}$.\\
+            Obwohl diese Funktion die Anzahl der Eigenwerte korrekt beschreibt, gibt es einige Schwachstellen, sollte man diese Funktion minimieren wollen:
+            Die Funktion ist eine Treppenfunktion, damit ist sie nicht stetig und alle Ableitungen sind gleich 0, also unbrauchbar für Minimierungsalogrithmen, die eine Ableitung verwenden.
 
             Diese Probleme kann man abfedern, indem man die Funktion auf dem Intervall $[\lambda_a, \lambda_b]$ gewichtet.
 % abfedern
@@ -805,33 +798,41 @@ Tag der Einreichung: \datum
             Diese Funktion sorgt dafür, dass Eigenwerte in der Mitte des Intervalls stärker ins Gewicht fallen
             Nach \cite[S. 3]{hauptteilTkachuk} sei die Funktion
             $$g(z) = -(z-((1+\alpha)\lambda_a -\alpha\lambda_b))(z-((1+\alpha)\lambda_b-\alpha\lambda_a))$$
-            sehr geeignet, man könnte aber auch zum Beispiel die Funktion
-            $$\Hat g(z) := -(z-(\lambda_a-\alpha))(z-(\lambda_b+\alpha))$$
-            nutzen, die die gleichen Eigenschaften besitzt.
-            In den Funktionen stellt $\alpha>0$ einen Parameter dar, der dafür sorgt, dass die Funktion auf dem Intervall positiv ist.
-            $\alpha$ wird auch \zitat{Inflationsparameter} (vgl. \cite[S. 3]{hauptteilTkachuk}) genannt.
+            sehr geeignet, man könnte aber auch andere Funktionen definieren, die diese Eigenschaften besitzen.
+            In den Funktionen stellt $\alpha>0$ einen Parameter dar, der dafür sorgt, dass die Funktion auf \lamAlamB positiv ist.
+            $\alpha$ wird auch Inflationsparameter (vgl. \cite[S. 3]{hauptteilTkachuk}) genannt.
 % Inflationsparameter
 
             Man findet so die erste Funktion, welche man mit Verfahren der Optimierung sinnvoll minimieren könnte:
             $$J(s) = \sum_{j=1}^n g(\lambda_j)h(\lambda_j)$$
 
             Hier müsste man allerdings jeden Eigenwert zuerst berechnen, um dann diese Formel anzuwenden.
-            Auch hängen weder $g$ noch $h$ explizit von $s$ ab, weshalb diese Funktion eher zur Ermittlung der gewichteten Anzahl von Eigenwerten gesehen werden kann, als die tatächliche Zielfunktion, die es zu minimieren gilt.
-            Das Ziel ist daher die Zählung der Eigenwerte durch
+            Auch hängen weder $g$ noch $h$ explizit von $s$ ab, weshalb diese Funktion eher zur Bestimmung der aktuellen gewichteten Anzahl von Eigenwerten gesehen werden kann, als die tatächliche Zielfunktion, die es zu minimieren gilt.
+            Das Ziel ist daher eine Funktion, deren Polstellen die Eigenwerte des Matrix-Pencils sind.
+            Diese Funktion kann dann durch ein Kurvenintegral integriert werden, um die Anzahl an Eigenwerten zu bestimmen
+
+            Die gesuchte Funktion sei
             \begin{equation}
                   \label{eqn: ZielfunktionMitPolstellen}
-                  \frac 1 {2\pi i}\int_\gamma \sum_{j=1}^{n} \frac{1}{z-\lambda_j}\ dz
+                  L(z, s) = g(z)\sum_{j\in N} \frac{1}{z-\lam_j} = \sum_{j=1}^n \frac{g(z)}{z-\lam_j}
             \end{equation}
-% besser wäre es, hier eine Funktion f/g zu definieren, man hat nicht so oft Eigenschaften über das Integral
-            Auf diese Gleichung kann Theorem \ref{thrm: IdentitätFutamura} angewendet werden.
-            Allerdings muss man zunächst zeigen, dass diese Gleichung tatsächlich die Eigenwerte in dem Intervall zählt, dafür benötigt man aber den Residuensatz, welcher im nächsten Abschnitt vorgestellt wird.
-% irgendwo muss noch gezeigt werden, dass alle Eigenwerte auf der reellen Achse liegen, sonst könnte man sich fragen, ob die Gleichung fehlerhaft wird, wenn man über einen Kreis in IC integriert
-      \section{Komplexe Analysis und der Residuensatz}
-            Dieses Kapitel behandelt ausschließlich den Residuensatz und die Argumente, warum man ihn auf (\ref{eqn: ZielfunktionMitPolstellen}) anwenden kann.
-            
-            Zuerst wird der Residuensatz vorgestellt und anschließend wird die benötigte Theorie definiert und auf (\ref{eqn: ZielfunktionMitPolstellen}) angewendet.
 
-            \begin{theorem}(Theorem 9.2 (Residue theorem)\cite[S. 141]{complexAnalysis})
+            Und das entsprechende Integral ist wie folgt definiert:
+            \begin{equation}
+                  \label{eqn: IntZielfunktionMitPolstellen}
+                 \int_\gamma L(z, s)\ dz
+            \end{equation}
+
+            Da alle Eigenwerte auf der reellen Achse liegen, sei $\gamma$ einfachheitshalber ein Kreis $C$.
+
+            Allerdings muss zunächst gezeigt werden, dass diese Gleichung tatsächlich die Eigenwerte in dem Intervall zählt, dafür benötigt man den Residuensatz, welcher im nächsten Abschnitt vorgestellt wird.
+      \section{Komplexe Analysis und der Residuensatz}
+            Dieses Kapitel behandelt ausschließlich den Residuensatz und die Argumente, warum man ihn auf (\ref{eqn: IntZielfunktionMitPolstellen}) anwenden kann.
+            Obwohl $L$ durch die Verteilung der Eigenwerte auch von dem Design-Parameter $s$ abhängt, vernachlässige diese Abhängigkeit in diesem Abschnitt.
+
+            Zuerst wird der Residuensatz und anschließend die benötigte Theorie vorgestellt und auf das Problem oben angewendet.
+
+            \begin{theorem}(Theorem 9.2 (Residue theorem)\cite[S. 141]{complexAnalysis})\\
                   \label{thrm: Residuensatz}
                   Sei $f$ analytisch auf $\Omega$, mit Ausnahme der isolierten Singularitäten $a_1,\dots,a_n$. Wenn für einen Kreis $\gamma\subseteq\C$ die Bedingungen $\gamma \sim 0$ und $a_j\notin \gamma,\ j=1,\dots,n$ erfüllt sind, dann
                   $$\int_\gamma f(z)\ dz = 2\pi i\sum_{k=1}^{n} n(\gamma, a_k)\Res_{a_k}f$$
@@ -849,7 +850,7 @@ Tag der Einreichung: \datum
                         
                         Offenbar ist (\ref{eqn: ZielfunktionMitPolstellen}) eine rationale Funktion:
 
-                        $$L(z) = \frac{p(Z)}{q(z)}$$
+                        $$L(z) = \frac{p(z)}{q(z)}$$
                         mit 
                         \begin{align*}
                               p(z) &= \sum_{j=1}^{n}\prod_{\underset{i\ne j}{i=1}}^{n} z-\lambda_i,\\
@@ -865,17 +866,17 @@ Tag der Einreichung: \datum
 
                         \begin{equation}
                               \label{hilfe: complexAnalysis_isolierteSingularitäten}
-                              f \text{ analytisch für } 0<|z-\lambda_i|<\widetilde{\epsilon},\quad i=1,\dots,n
+                              L \text{ analytisch für } 0<|z-\lambda_i|<\widetilde{\epsilon},\quad i=1,\dots,n
                         \end{equation}
                         mit
-                        $$\widetilde{\epsilon}:= \frac{1}{2}\,\min_{i,j\in\{1,\dots,n\}: \lambda_i\ne \lambda_j} |\lambda_i-\lambda_j|$$
+                        $$\widetilde{\epsilon}:= \frac{1}{2}\,\min_{i,j\in N: \lambda_i\ne \lambda_j} |\lambda_i-\lambda_j|$$
 % alternative: \min_{\lambda_i,\lambda_j\in\lambda(K,M): \lambda_i\ne\lambda_j}
                         Für den Fall, dass ein Eigenwert doppelt vorkommt, so ist der Eigenwert trotzdem eine isolierte Singularität, da die Definition dies zulässt.
 % aus den Fingern gesaugt
                   \item $\frac{1}{2\pi i}\int_{C} \frac 1 {z-a}\ dz:$
                         Dieses Integral ist zwar nicht direkt für Theorem \ref{thrm: Residuensatz} von Bedeutung, allerdings wird damit vieles vereinfacht.
 
-                        Sei $z_0\in\C,\ r>0\text{ und }C=\{z_0+r e^{it}: t\in [0,2\pi]\}$ (vgl. \cite[S. 48]{complexAnalysis}), laut Proposition 4.13 aus \cite[S. 48]{complexAnalysis} gilt:
+                        Sei $z_0\in\C,\ r>0\text{ und }C=\{z_0+r e^{it}: t\in [0,2\pi]\}$ (vgl. \cite[S. 48]{complexAnalysis}), laut Proposition 4.13 aus \cite[S. 48]{complexAnalysis} gelte:
                         \begin{equation}
                               \label{hilfe: complexAnalysis_IntegralEinsDurchX}
                               \frac{1}{2\pi i}\int_C \frac 1 {z-a}\ dz = \begin{cases}
@@ -894,19 +895,16 @@ Tag der Einreichung: \datum
                               n(\gamma,a) = \begin{cases}
                                     1& \text{ : }a\in B_r(z_0)\\
                                     0& \text{ : }a\notin\overline {B_r(z_0)}
-      % ist klar was mit Inneren eines Kurvenintegrals gemeint ist?
                               \end{cases}
                         \end{equation}
-                        Hierbei benötigt man das $C$ aus (\ref{hilfe: complexAnalysis_IntegralEinsDurchX}), damit der Kreis in positive Richtung durchlaufen wird und kein Punkt (bis auf $z=z_0+1$) mehrmals vorkommt.
+                        Hierbei benötigt man das $C$ aus (\ref{hilfe: complexAnalysis_IntegralEinsDurchX}), damit der Kreis in positive Richtung durchlaufen wird und kein Punkt (bis auf $z=z_0+r$) mehrmals vorkommt.
 % jetzt klingt es so, also könne kein anderes C dies vollbringen
                   \item $\gamma \sim 0$:
                         Sei $\gamma$ geschlossene Kurve und $\Omega$ ein Gebiet, durch Anwenden von Definition 5.5 aus \cite[S. 67]{complexAnalysis} folgt:
                         $$\gamma \sim 0 \Leftrightarrow n(\gamma, a)=0\ \forall a\notin \Omega$$
 
-                        Mit obiger Theorie schließt man, dass gilt:
-                        $$\gamma\subset \Omega \Rightarrow n(\gamma, a)=0$$
-                        da sich $\gamma$ nicht um den Punkt $a$ winden kann.
-% das ist falsch und schlecht begründet, Omega muss einfach zusammenhängend oder so sein(Omega zusammenhängend und Omega^C zusammenhängend), sonst könnte Omega wie Donut geformt sein
+                        Für das obige Problem sei $\Omega = \C$, offenbar gilt damit für alle $\alpha \in \Omega^C$
+                        $$n(\gamma, \alpha) = 0$$
 
                   \item $\Res_af$:
                         Nach Beispiel 9.3 aus \cite[S. 142]{complexAnalysis} gilt für eine einfache Polstelle:
@@ -916,97 +914,82 @@ Tag der Einreichung: \datum
                         \end{equation}
                         Anwenden auf $\Res_{\lambda_i}L$ ergibt:
                         \begin{align*}
-                              \Res_{\lambda_i}L =& \lim_{z\to \lambda_i} \sum_{j=1}^{n} (z-\lambda_i)\frac{1}{z-\lambda_j} = \underbrace{\sum_{\underset{j\ne i}{j=1}}^{n} \frac{z-\lambda_i}{z-\lambda_j}}_{\to 0} + \frac{z-\lambda_I}{z-\lambda_i} \\
-                              =& 1
+                              \Res_{\lambda_i}L =& \lim_{z\to \lambda_i} \sum_{j=1}^{n} (z-\lambda_i)\frac{g(z)}{z-\lambda_j} = g(z)\underbrace{\sum_{\underset{j\ne i}{j=1}}^{n} \frac{z-\lambda_i}{z-\lambda_j}}_{\to 0} + g(z)\frac{z-\lambda_i}{z-\lambda_i} \\
+                              =& g(\lambda_i)
                         \end{align*}
 
                         Man beachte, dass für einen Eigenwert $\lambda$, der k-mal vorkommt, gilt:
                         $$\Res_\lambda L = k$$
-                        In dem Residuensatz ist es somit nicht von Belangen, wie groß der Koeffizient eines Summanden ist. Am Ende erhält man hier immer die Anzahl an Eigenwerten, die sich in dem Integrationsgebiet befinden.
+                        Am Ende erhält man hier immer die Anzahl an Eigenwerten, die sich in dem Integrationsgebiet befinden.
             \end{itemize}
 
             Damit wurde gezeigt, dass der Residuensatz auf die Funktion $L$ angewendet werden kann.
 
+% kann auch rausgelassen werden
             Ferner gelte nach \cite[S. 77]{complexAnalysisVL} der Residuensatz auch für \zitat{toy contours}\cite[S. 77]{complexAnalysisVL}.
 % Zitat überprüfen/ übersetzen
             Beispiele für toy contours sind Rechtecke oder Kreisausschnitte (siehe \cite[S. 42]{complexAnalysisVL}).
 
       \section{Anwendung des Residuensatzes und der Identität von Futamura}
-            % Nach (\ref{hilfe: complexAnalysis_WindungNullEins}) gilt für einen Eigenwert, der nicht in dem Intervall liegt: 
+            Mit dem Residuensatz aus Theorem \ref{thrm: Residuensatz} gilt folglich für (\ref{eqn: IntZielfunktionMitPolstellen}):
+            $$\frac 1 {2\pi i}\int_\gamma L(z,s)\ dz = \sum_{k=1}^{n} n(\gamma, \lambda_k) \Res_{\lambda_k}L = \sum_{k=1}^{n} n(\gamma, \lambda_k) g(\lambda_k)$$
 
-            Mit dem Residuensatz \ref{thrm: Residuensatz} gilt folglich für (\ref{eqn: ZielfunktionMitPolstellen}):
-            $$\int_\gamma \sum_{j=1}^{n} \frac{1}{z-\lambda_j}\ dz = \mu$$
-
-            und mit der Identität von Futamura:
-            $$\mu = \int_\gamma \tr((zM-K)\inv M)\ dz$$
-
-            Man hat somit die ungewichtete Zählung der Eigenwerte als Integral darstellen können, analog kann auch die gewichtete Zählung umgeschrieben werden:
-            \begin{align*}
-                  \frac{1}{2\pi i}\int_\gamma \sum_{j=1}^{n} g(z)\frac{1}{z-\lambda_j} \ dz=& \sum_{j=1}^{n} n(\gamma, \lambda_j) \Res_{\lambda_j}K = \sum_{j=1}^n n(\gamma, \lambda_j) g(\lambda_j)\\
-                  =& \sum_{j=1}^{n} \1_{[\lambda_a,\lambda_b]}(\lambda_j) g(\lambda_j) = \sum_{j=1}^{n} h(\lambda_j) g(\lambda_j) \\
-                  =& J(s)
-            \end{align*}
-% nochmal schauen, ob alles passt
-% vorher muss definiert werden, welcher Kreis \gamma ist
-            wobei verwendet wurde, dass $\lambda_j\in\R\ \forall j=1,\dots,n$ und damit nach (\ref{hilfe: complexAnalysis_WindungNullEins}) gilt:
-            $$n(\gamma, \lambda_j) = \begin{cases}
-                  1& \text{ : }\lambda_j\in B_\frac{\lambda_b-\lambda_a}{2}(\frac{\lambda_a+\lambda_b}{2})\\
-                  0& \text{ : }\lambda_j\notin\overline {B_\frac{\lambda_b-\lambda_a}{2}(\frac{\lambda_a+\lambda_b}{2})}
-            \end{cases} = \begin{cases}
-                  1& \text{ : }\lambda_j\in (\lambda_a,\lambda_b)\\
-                  0& \text{ : }\lambda_j\notin[\lambda_a,\lambda_b]
-            \end{cases} = \1_{[\lambda_a,\lambda_b]}(\lambda_j)$$
-% ist nicht ganz richtig, was ist mit \lambda_j = \lambda_a?
-
-            und wie in (\ref{hilfe: complexAnalysis_Residuum}) gilt:
-
-            $$Res_{\lambda_j}K = \lim_{z\to\lambda_j} (z-\lambda_j)K(z) = \underbrace{\sum_{\underset{j\ne i}{j=1}}^{n} g(z)\frac{z-\lambda_i}{z-\lambda_j}}_{\to 0} + g(z)\frac{z-\lambda_I}{z-\lambda_i} = g(z)$$
-% vielleicht nicht das Resultat, sondern die Anwendung von Bsp 9.3 referenzieren
-
-            Man wende nun die Identität von Futamura aus Theorem \ref{thrm: IdentitätFutamura} an und erhalte
-            $$J(s) = \frac 1 {2\pi i}\int_\gamma g(z) \tr((zM-K)\inv M)\ dz$$
-
-            Zur numerischen Berechnung, approximiere $J(s)$ durch eine Quadraturregel, nehme hier die zusammengesetzte Trapezregel.
-            Die $m$ Quadraturpunkte $z_k$ und Gewichte $c_k$ sind in \cite[S. 128]{grundlageFutamura} gegeben durch:
-            \begin{align}
-                  z_k =& \widetilde{z_0}+ \widetilde{r}e^{\frac{2\pi i}{m}\klammer{k+\frac 1 2}},\quad k=0,\dots,m-1\\
-                  c_k =& \frac{z_k-\widetilde{z_0}}{m} = \frac {\widetilde{r}} m e^{\frac{2\pi i}{m}\klammer{k+\frac 1 2}},\quad k=0,\dots,m-1
+            mit \begin{align}
+                  \gamma =& \{\Tilde{z_0} + \Tilde r\exp(i t): t\in [0,2\pi]\},\label{def: Kreis}\\
+                  \Tilde{z_0} =& \frac {\lambda_a+\lambda_b} {2},\quad\Tilde r = \frac {\lambda_b-\lambda_a} {2}\nonumber
             \end{align}
-            Die Gewichte verteilen sich somit gleichmäßig auf dem Kreis $\gamma$. Ferner wird die Quadraturregel nicht an den Punkten $\lambda_a$ und $\lambda_b$ ausgewertet, da es zu einem Fehler kommt, falls ein Eigenwert gerade einen der beiden Werte annehmen sollte.
-% das stimmt vielleicht, aber bis jetzt ist es nur hingerotzt
-            
-            Durch Anwenden der Trapezregel gilt für $J$:
-            $$J(s) \approx \frac 1 {2\pi i}\sum_{k=0}^{m-1} g(z_k) \tr((z_kM-K)\inv M)\,c_k =:J^*(s)$$
 
-            Laut \cite[S. 4]{hauptteilTkachuk} sei dieser Ausdruck differenzierbar
-% in tkachuk ist aber das gewicht anders definiert, macht aber keinen unterschied
-            Da diese Funktion in Kapitel \ref{sec: Programmieren} mithilfe des Gradientenverfahrens minimiert wird, benötigt man zusätzlich die Ableitung von $J^*$. Diese ist gegeben durch:
+            Mit (\ref{hilfe: complexAnalysis_WindungNullEins}) folgt für $n(\gamma, \lam_k)$:
+            $$n(\gamma, \lam_k) = \begin{cases}
+                  1& \text{ : }\lam_k\in B_{\Tilde{r}}(\Tilde{z_0})\\
+                  0& \text{ : }\lam_k\notin\overline {B_{\Tilde{r}}(\Tilde{z_0})}
+            \end{cases}$$
+            
+            Da aber $\lam_k\in \R\ \forall k=1,\dots,n$, ist diese Gleichung äquivalent zu
+            $$n(\gamma, \lam_k) = \begin{cases}
+                  1& \text{ : }\lam_k\in (\lam_a,\lam_b)\\
+                  0& \text{ : }\lam_k\notin \lamAlamB
+            \end{cases} = \1_{\lamAlamB}(\lambda_k) = h(\lambda_k)$$
+
+            Beachte, dass für den Fall $\lam_k \in \{\lam_a, \lam_b\}$ diese Theorie und auch der Residuensatz aus Theorem \ref{thrm: Residuensatz} keine Aussage trifft, dieser Fall tritt aber fast sicher nicht ein.
+            Für (\ref{eqn: IntZielfunktionMitPolstellen}) folgt
+            $$\frac 1 {2\pi i}\int_\gamma L(z,s)\ dz = \sum_{k=1}^{n} h(\lambda_k) g(\lambda_k) = J(s)$$
+            
+            und mit der Identität von Futamura:
+            \begin{align}
+                  J(s) =&\, \frac 1 {2\pi i}\int_\gamma L(z,s)\ dz = \frac 1 {2\pi i}\int_\gamma g(z)\sum_{j\in N} \frac{1}{z-\lam_j}\ dz\nonumber\\
+                  =&\, \frac 1 {2\pi i}\int_\gamma g(z)\tr((zM(s)-K(s))\inv M(s))\ dz\label{eqn: JGleichIntTr}
+            \end{align}
+
+            Diese Funktion hängt nun explizit von $s$ ab und kann daher in Kapitel \ref{sec: Programmieren} minimiert werden.
+            
+            Da diese Funktion in Kapitel \ref{sec: Programmieren} mithilfe des Gradientenverfahrens minimiert wird, benötigt man zusätzlich die Ableitung
             \begin{equation}
                   \label{eqn: AbleitungZielfunktion}
-                  \nabla J^*(s) = \frac 1 {2\pi i}\sum_{k=0}^{m-1} g(z_k) \nabla \klammer{\tr(\underbrace{(z_kM-K)\inv M}_{=:B_j(s)})}\,c_k
+                  \frac{\partial L(z,s)}{\partial s} = g(z) \frac{\partial}{\partial s}\klammer{\tr(\underbrace{(zM-K)\inv M}_{=:B(z, s)})}
             \end{equation}
 
-            und es gilt für $\nabla \klammer{\tr(B_j(s))}$:
-            $$\nabla \klammer{\tr(B_j(s))} = \nabla \klammer{\sum_{i=1}^n (B_j)_{ii}} = \sum_{i=1}^n \nabla (B_j)_{ii} = \tr(\nabla B_j)$$.
+            und es gilt für $\frac{\partial}{\partial s} \klammer{\tr(B(z, s))}$:
+            $$\frac{\partial}{\partial s} \klammer{\tr(B(z, s))} = \frac{\partial}{\partial s} \klammer{\sum_{i=1}^n (B(z, s))_{ii}} = \sum_{i=1}^n \frac{\partial}{\partial s} (B(z,s))_{ii} = \tr\klammer{\frac{\partial}{\partial s} B(z,s)}$$.
 
-            Beachte, dass für $s\in \R^l$ und $B_j \in \R^{n\times n}$ gilt:
+            Beachte, dass für $s\in \R^l$, $z$ fest und $B\in \R^{n\times n}$ gilt:
 
-            $$B_j(s): \R^l \to \R^{n\times n}\Rightarrow \nabla B_j(s) : \R^l\to \R^{n\times n}\times \R^l \Rightarrow \tr(\nabla B_j(s)): \R^l \to \R^l$$
+            $$B(z, \cdot): \R^l \to \R^{n\times n}\Rightarrow \frac{\partial}{\partial s} B(z, s) : \R^l\to \R^{n\times n}\times \R^l \Rightarrow \tr\klammer{\frac{\partial}{\partial s} B(z, s)}: \R^l \to \R^l$$
 
-            Man kann sich $\nabla B_j(s)$ als eine $n\times n$-Matrix vorstellen, in der jeder Eintrag ein Vektor in $\R^l$ ist.
+            Man kann sich $\frac{\partial}{\partial s} B(z, s)$ als eine $n\times n$-Matrix vorstellen, in der jeder Eintrag ein Vektor in $\R^l$ ist.
             Daher summiert man auch mit der Spur die Vektoren in $\R^l$ auf der Diagonalen auf und erhält selber wieder einen Vektor in $\R^l$.
 % könnte man auch weglassen
             
-            Außerdem gilt für $\nabla B_j(s)$:
+            Ferner gilt für $\frac{\partial}{\partial s} B(z, s)$:
             \begin{align*}
-                  \nabla B_j(s) =& \frac{dD_k}{ds} \ M + D_k \ \frac{dM}{ds}\\
-                  =& - D_k \frac{d}{ds}(z_kM-K) D_k + D_k \ \frac{dM}{ds}\\
-                  =& D_k \ \frac{dM}{ds} - D_k \klammer{z_k \frac{dM}{ds}-\frac{dK}{ds}} D_k
+                  \frac{\partial}{\partial s} B(z, s) =& \frac{dD}{ds} \ M + D \ \frac{dM}{ds}\\
+                  =& - D \frac{d}{ds}(zM-K) D + D \ \frac{dM}{ds}\\
+                  =& D \ \frac{dM}{ds} - D \klammer{z \frac{dM}{ds}-\frac{dK}{ds}} D
             \end{align*}
 
-            Wobei der Lesbarkeit halber $D_k:=(z_kM-K)\inv$ gilt und im 2. Schritt die Formel
-            $$\nabla A\inv = -A\inv\ \nabla A\ A\inv$$
-            angewendet wurde.
+            Wobei der Lesbarkeit halber $D:=(zM-K)\inv$ gilt und im 2. Schritt die Formel
+            $$\nabla A(t)\inv = -A(t)\inv\ \nabla A(t)\ A(t)\inv$$
+            angewendet wurde.\\
             Beweis (vgl. \cite{derivativeInverseMatrix}):
             Seien $a_{ij}(t)$ die Elemente der Matrix $A(t)$ und $\widetilde{a}_{ij}(t)$ die Elemente von $A\inv(t)$.
 
@@ -1025,8 +1008,8 @@ Tag der Einreichung: \datum
             Die endgültige Formel für die Ableitung der approximierten gewichteten Eigenwert-Zählung sieht folgendermaßen aus:
             \begin{align}
                   \label{eqn: vollständigeZielfunktion}
-                  \nabla J^*(s) =& \frac 1 {2\pi i}\sum_{k=0}^{m-1} g(z_k) \tr\klammer{D_k \ \frac{dM}{ds} - D_k \klammer{z_k \frac{dM}{ds}-\frac{dK}{ds}} D_k}\,c_k\\
-                  =& \frac 1 {2\pi i}\sum_{k=0}^{m-1} g(z_k) \klammer{\tr\klammer{D_k \ \frac{dM}{ds}} - \tr\klammer{D_k \klammer{z_k \frac{dM}{ds}-\frac{dK}{ds}} D_k}}\,c_k
+                  \nabla J^*(s) =& \frac 1 {2\pi i}\sum_{k=0}^{m-1} g(z) \tr\klammer{D \ \frac{dM}{ds} - D \klammer{z \frac{dM}{ds}-\frac{dK}{ds}} D}\,c_k\\
+                  =& \frac 1 {2\pi i}\sum_{k=0}^{m-1} g(z) \klammer{\tr\klammer{D \ \frac{dM}{ds}} - \tr\klammer{D \klammer{z \frac{dM}{ds}-\frac{dK}{ds}} D}}\,c_k
             \end{align}
 % man könnte noch auf die Wohldefiniertheit eingehen, da es mit den Dimensionen passt, aber es geht erstmal
             
